[Test] Add ZGC test in GlobalMarkTest
--story=865380915

Contributed-by:kalinshi